fix navbar z-index

--- a/P1/static/css/portada.css
+++ b/P1/static/css/portada.css
@@ -28,6 +28,7 @@ header{
     backdrop-filter: blur(30px);
     -webkit-box-shadow: 0px 5px 23px 20px white; 
     box-shadow: 0px 5px 23px 20px white;
+    z-index: 1;
 }
 
 .logo{
